src/main/java/pl/kurs/java/test/exception/Errors/Error.java
package pl.kurs.java.test.exception.Errors;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;
import lombok.experimental.Accessors;
import org.springframework.http.HttpStatus;

@Data
@NoArgsConstructor
@AllArgsConstructor
@Accessors(chain = true)
public class Error {
    private HttpStatus httpStatus;
    private int status;
    private String message;
}